Bug 370452 - Message viewer: New citation renderer swallows newlines in citation
Summary: Message viewer: New citation renderer swallows newlines in citation
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-11 11:44 UTC by Kevin Funk
Modified: 2016-10-25 11:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3.3
Sentry Crash Report:


Attachments
Screenshot showing the citation rendering swalloing newlines (114.92 KB, image/png)
2016-10-11 11:44 UTC, Kevin Funk
Details
Sample mail where this issue is apparent (5.62 KB, application/mbox)
2016-10-11 11:46 UTC, Kevin Funk
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Funk 2016-10-11 11:44:07 UTC
See screenshot.

No newlines are shown in citations when viewing mails.

Reproducible: Always
Comment 1 Kevin Funk 2016-10-11 11:44:48 UTC
Created attachment 101524 [details]
Screenshot showing the citation rendering swalloing newlines

On the left you can see the citation rendered as usual in kmail2 (no newlines in citation shown).
On the right you can see the raw source of the mail (newlines shown).
Comment 2 Kevin Funk 2016-10-11 11:46:06 UTC
Created attachment 101525 [details]
Sample mail where this issue is apparent
Comment 3 Kevin Funk 2016-10-11 11:47:03 UTC
Using KDEPIM stack from Ubuntu 16.10. KF5 5.26.0, Qt 5.6.1.
Comment 4 Laurent Montel 2016-10-25 11:13:14 UTC
I confirm it.
it's
Comment 5 Laurent Montel 2016-10-25 11:13:52 UTC
I confirm it.
I created a test case for it.
It's a problem with qtwebengine rendering.
I will look at how to create a workaround
Comment 6 Laurent Montel 2016-10-25 11:38:37 UTC
Git commit ca0982e07525ebe068a65ed89e4ae1d95834e3fd by Montel Laurent.
Committed on 25/10/2016 at 11:37.
Pushed by mlaurent into branch 'Applications/16.08'.

Fix Bug 370452 - Message viewer: New citation renderer swallows newlines in citation

FIXED-IN: 5.3.3

M  +3    -1    messageviewer/src/messagepartthemes/default/defaultrenderer.cpp
M  +5    -0    messageviewer/src/viewer/csshelperbase.cpp

http://commits.kde.org/messagelib/ca0982e07525ebe068a65ed89e4ae1d95834e3fd