Fix Bug 370452 - Message viewer: New citation renderer swallows newlines in citation

FIXED-IN: 5.3.3
BUG: 370452